# jiyi

./: .git-mirror.json  .gitignore  AppImageBuilder.yml  README-en.md  README.md  analysis_options.yaml  auto-translate.fish  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml  setup_jni_libs.sh
.github/workflows/: release.yml
android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
lib/: authenticator.dart  em.dart  encryption.dart  main.dart  smooth_router.dart
lib/components/: asr_settings.dart  download.dart  download_unzip.dart  floating_btn.dart  geo_cluster_card.dart  llm_settings.dart  map_settings.dart  md_edit.dart  md_input.dart  recorder_tape.dart  settings_utils.dart  soundviz.dart  spinner.dart  tape.dart  tape_button.dart  tapewheel.dart  tts_settings.dart  yes_no.dart  zdpp_settings.dart
lib/l10n/: app_en.arb  app_zh.arb  localizations.dart  localizations_en.dart  localizations_zh.dart
lib/pages/: app.dart  default_colors.dart  geo_spatial.dart  geo_timeline.dart  home.dart  md_edit.dart  player.dart  playlist.dart  record.dart  search.dart
lib/services/: geo.dart  io.dart  reminder.dart  secure_storage.dart  speech.dart
lib/utils/: anno.dart  app_lifecycle_overlay.dart  asr.dart  authenticator.dart  em.dart  encryption.dart  geo_cluster.dart  geocoder.dart  io.dart  llm.dart  map_setting.dart  map_setting.g.dart  metadata.dart  metadata.g.dart  notifier.dart  secure_storage.dart  smooth_router.dart  stop_model.dart  tts.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: .gitignore  frb_generated.rs
rust/src/api/: mod.rs
rust/src/api/models/: bpe.rs
rust/src/api/tokenizer/: mod.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+60 files in other folders)
