[package]
name = "jiyi_native_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ahash = "0.8.12"
extend = "1.2.0"
flutter_rust_bridge = "=2.11.1"
tokenizers = "0.21.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
