[package]
name = "jiyi_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# change this once qwen3 is included in release
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }

anyhow = "1.0.99"
flutter_rust_bridge = "=2.11.1"
serde_json = "1.0.143"
tokenizers = "0.22.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# https://github.com/huggingface/candle/issues/1625#issuecomment-3013742081
[profile.dev.package.gemm-f16]
opt-level = 3

[profile.dev]
opt-level = 3
